main.css
@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600");

body, html {
    border: 0;
    margin: 0;
    font-family: "Source Sans Pro", sans-serif;
    background-color: #4E5864;
    /*background-color: #2A2F36;*/
    /*background-color: #2F3F3C;*/
    color: white;
}

li {
    /*for some reason not working with firefox*/
    border:0;
    padding:0;
}

h1 {
    letter-spacing: 0.4rem;
}

.name {
    text-transform: uppercase;
    margin-bottom: 1rem;
}

.tagline{
    text-transform: uppercase;
    letter-spacing: 0.2rem;
    font-size: 0.85rem;
    text-align: center;
}

#maincon {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
}

.hidden {
    display: none !important;
}

.divcon {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    animation: zoomIn 3s; /*scale-in 1.5s ease-in-out*/
    margin-top: 10rem;
    /*height: 0;*/
    /*max-height: 0;*/
}

/*.divcon:hover{*/
/*    transition: max-height 0.75s ease, padding 0.75s ease, opacity 0.325s ease-in-out;*/
/*    max-height: 50rem;*/
/*}*/

.nav {
    display: flex;
    margin-top: 10rem;
    margin-bottom: 0;
    padding-left: 0;
}

a {
    color: white;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 0.2rem;
    font-size: 0.85rem;
    padding: 0 1.25rem 0 1.25rem;
    line-height: 2.5rem;
    display: block;
    min-width: 4.5rem;
}

.nav > ul {
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav > li:hover {
    background-color: rgba(255, 255, 255, 0.075);
}

.nav > li {
    list-style-type: none;
    border-right: solid 1px white;
    min-width: 6rem;
    text-align: center;
}

.nav > li:last-child {
    border-right: none
}


@keyframes zoomIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}


/*for article pages*/

.articlepages {
    display: none !important;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
    /*max-width: 40rem;*/
    /*background-color: red;*/
}

.main {
    /*display: flex;*/
    justify-content: center;
    align-items: center;
    padding: 3rem;
    margin: 2rem;
    border-radius: 8px;
    /*background-color: #23272B;*/
    background-color: rgba(35,39,43,0.5);
    max-width: 40rem;
    position: relative;
    min-width: 70%;
    animation: scale-in 0.25s;
}

.main blockquote+div {
    display: flex;
    justify-content: center;
}

.main blockquote+div > a {
    padding: 0.2rem;
    min-width: 0;
}

@keyframes scale-in {
    0% {
        transform: scale(0);
        opacity: 1;
    }
    100% {
        transform: scale(1);
        opacity: 1;
    }
}

@keyframes scale-out {
    0% {
        transform: scale(1);
        opacity: 1;
    }
    100% {
        transform: scale(0);
        opacity: 1;
    }
}


@media only screen and (max-width: 450px) {
    .main {
        justify-content: center;
        align-items: center;
        padding: 1.5rem;
        margin: 1rem;
        border-radius: 8px;
        background-color: rgba(35,39,43,0.5);
        max-width: 40rem;
        position: relative;
    }
}

.article-image {
    width: 100%;
}

.article-image > img {
    width: 100%;
    border-radius: 4px;
}

.articlepagesflex {
    display: flex !important;
}

article > h2 {
    text-transform: uppercase;
    letter-spacing: 0.2rem;
    text-decoration: underline;
    text-underline-offset: 0.6rem;
}

article>img.close {
    position: absolute;
    height: 24px;
    width: 24px;
    top: 30px;
    right: 30px;
}
/*article {*/
/*    position: relative;*/
/*}*/

article>img.close:hover {
    position: absolute;
    height: 24px;
    width: 24px;
    top: 30px;
    right: 30px;
    background-color: rgba(255, 255, 255, 0.075);
    border-radius: 50px;
}

@media only screen and (max-width: 550px) {
    .nav {
        display: flex;
        flex-direction: column;
    }
    .nav > li {
        list-style-type: none;
        min-width: 6rem;
        text-align: center;
        border-bottom: solid 1px white;
        border-right: none !important;
    }
    .nav > li:last-child {
        border-bottom: none
    }
    article>img.close {
        position: absolute;
        height: 16px;
        width: 16px;
        top: 30px;
        right: 30px;
    }
    article>img.close:hover {
        position: absolute;
        height: 16px;
        width: 16px;
        top: 30px;
        right: 30px;
        background-color: rgba(255, 255, 255, 0.075);
        border-radius: 50px;
    }
}


textarea {
    background-color: transparent;
    border: 1px solid white;
    width: 100%;
    color: white;
    border-radius: 5px;
    margin-top: 0.5rem;
    margin-bottom: 2rem;
    padding: 0.8rem;
}

form {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

form > div {
    width: 100%;
    display: flex;
    justify-content: space-between;
    margin-bottom: 2rem;
}

div.formfield {
    width: calc(50% - 1rem);
    display: flex;
    flex-direction: column;
}

div.formfield > input {
    background-color: transparent;
    color: white;
    height: 2rem;
    border-radius: 5px;
    margin-top: 0.5rem;
    padding: 0.5rem;
    border: 1px solid white;
}

form label {
    text-transform: uppercase;
    font-size: 0.8rem ;
    letter-spacing: 0.2rem;
}

form > button {
    padding: 0.5rem 1rem;
    text-transform: capitalize;
    font-size: 0.8rem;
    font-weight: 600;
    letter-spacing: 0.2rem;
    line-height: calc(2.5rem - 5px)
}


@media only screen and (max-width: 450px) {
    form > div {
        width: 100%;
        display: block;
        margin-bottom: 0;
    }
    div.formfield {
        width: 100%;
        margin-bottom: 2rem;
    }
}

#projects .project-article {
    margin-bottom: 1rem;
    display: flex;
    justify-content: space-between;
}

#projects div.project-article img{
    object-fit: contain;
    width: 100%;
}

.project-article>a {
    width: 55%;
    padding: 0;
}
.project-article > div {
    width: 40%;
}

.project-article > div > p{
    margin: 0;
}

.project-article > div > a{
    padding: 0;
}

.project-article > div > h3 > a:first-child{
    padding-left: 1rem;
    display: inline;
}

.project-article > div > h3 > a{
    display: inline;
    padding: 0;
}

.project-article > div > h3{
    margin: 0;
    /*text-decoration: underline;*/
    font-style: oblique;
}

@media only screen and (max-width: 750px) {
    div.project-article {
        display: flex;
        flex-direction: column;
    }
    .project-article > div{
        width: 100%;
    }
    .project-article > a{
        min-width: 100%;
    }
}


#whoami img {
    max-width: 350px;
}

#whoami article > div {
    text-align: center;
}

